[package]
name = "rusty-p4-proto"
version = "0.1.0-alpha.1"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
repository = "https://github.com/another-s347/rusty-p4-proto"
license = "Apache-2.0"
description = "Proto crate for Rusty-p4. Using p4runtime from PI repo."

[dependencies]
prost = "0.5"
bytes = "0.4"
grpcio = {version="0.5.0-alpha.4",features=["prost-codec"]}
prost-types = "0.5"
futures = "0.1.28"

[build-dependencies]
grpcio-compiler = {version="0.5.0-alpha.2", features=["prost-codec"]}