[package]
name = "rusty-p4-proto"
version = "0.1.0-alpha.3"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"
repository = "https://github.com/another-s347/rusty-p4-proto"
license = "Apache-2.0"
description = "Proto crate for Rusty-p4. Using p4runtime from PI repo."

[dependencies]
prost = "0.7"
bytes = "1"
tonic-build = "0.4"
tonic = {version="0.4"}
prost-types = "0.7"

[build-dependencies]
tonic-build = {version="0.4", features = ["prost"]}
prost-build = "0.7"